--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -126,18 +126,18 @@ jobs:
       DOWNLOAD_ARTIFACT_PATH: ${{ needs.build-and-rego-test.outputs.REGO_ARTIFACT_PATH }}
     secrets: inherit
   
-  check-system-tests:
-    name: Check if system tests passed
-    runs-on: ubuntu-latest
-    needs: [ks-and-rego-test]
-    if: |
-      ${{ (always() && 
-      (contains(needs.ks-and-rego-test.result, 'success')) && 
-      !(contains(needs.ks-and-rego-test.result, 'skipped')) && 
-      !(contains(needs.ks-and-rego-test.result, 'failure')) && 
-      !(contains(needs.ks-and-rego-test.result, 'cancelled'))) }}
-    outputs:
-      OUTPUT1: ${{ needs.ks-and-rego-test.outputs.output1 }}
-    steps:
-      - name: Check outputs
-      run: echo "ks-and-rego-test status is $OUTPUT1" >> $GITHUB_OUTPUT
+  # check-system-tests:
+  #   name: Check if system tests passed
+  #   runs-on: ubuntu-latest
+  #   needs: [ks-and-rego-test]
+  #   if: |
+  #     ${{ (always() && 
+  #     (contains(needs.ks-and-rego-test.result, 'success')) && 
+  #     !(contains(needs.ks-and-rego-test.result, 'skipped')) && 
+  #     !(contains(needs.ks-and-rego-test.result, 'failure')) && 
+  #     !(contains(needs.ks-and-rego-test.result, 'cancelled'))) }}
+  #   outputs:
+  #     OUTPUT1: ${{ steps.checkoutputs.outputs.output1 }}
+  #   steps:
+  #     - id: checkoutputs
+  #     run: echo "ks-and-rego-test status is $OUTPUT1" >> $GITHUB_OUTPUT
