--- a/.github/workflows/export-dev.yaml
+++ b/.github/workflows/export-dev.yaml
@@ -7,17 +7,8 @@ jobs:
     name: Build, Test, Create And Generate releaseDev
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@50fbc622fc4ef5163becd7fab6573eac35f8462e
-      - name: Set up Go
-        uses: actions/setup-go@bfdd3570ce990073878bf10f6b2d79082de49492
-        with:
-          go-version: 1.19
-
-      - name: Test Regoes
-        working-directory: testrunner
-        run: |
-          apt update && apt install -y cmake
-          GOPATH=$(go env GOPATH) make
+      - name: Code checkout
+        uses: actions/checkout@v3
           
       - name: Run export script
         run: |
@@ -25,12 +16,14 @@ jobs:
           rm -r releaseDev
           cp -R pre-release releaseDev
 
-      - name: stage changed files
-        run: git add .
+      - name: Commit files
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git commit -a -m "Updating releaseDev files"
 
-      - name: Commit & Push changes
-        uses: actions-js/push@master
+      - name: Push changes
+        uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          force: true
-          message: 'Overwritten by Github Actions - ${date}'
+          branch: master
