--- a/.github/workflows/export-dev.yaml
+++ b/.github/workflows/export-dev.yaml
@@ -4,7 +4,7 @@ on:
     branches: [ master, main ]
 jobs:
   once:
-    name: Build, Test, Create And Generate releaseDev
+    name: Build And Generate releaseDev
     runs-on: ubuntu-latest
     permissions:
       contents: write
