--- a/.github/workflows/push-to-armosec.yaml
+++ b/.github/workflows/push-to-armosec.yaml
@@ -9,9 +9,10 @@ jobs:
   push:
     runs-on: ubuntu-latest
     env:
-      PRIVATE_REPO_URL: <private-repo-url>
+      PRIVATE_REPO_URL: ${{ secrets.PRIVATE_ARMOSEC_URL }}
       PRIVATE_REPO_USERNAME: ${{ secrets.PRIVATE_REPO_USERNAME }}
       PRIVATE_REPO_TOKEN: ${{ secrets.PRIVATE_REPO_TOKEN }}
+      PRIVATE_REPO_TOKEN: ${{ secrets.PRIVATE_REPO_EMAIL }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
