--- a/.github/workflows/push-releasedev-updates.yaml
+++ b/.github/workflows/push-releasedev-updates.yaml
@@ -2,8 +2,7 @@ name: Push to regolibrary-dev
 
 on:
   pull_request:
-    branches:
-      - master
+    branches: [master, main]
 
 jobs:
   build:
@@ -20,12 +19,12 @@ jobs:
         OUTPUT=pre-release python ./scripts/export.py
         rm -r releaseDev
         cp -R pre-release releaseDev
-        
+
     - name: Commit files
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
-        git commit -a -m "Add changes"
+        git commit -a -m "Updating releaseDev files"
 
     - name: Push changes
       uses: ad-m/github-push-action@master
