--- a/.github/workflows/push-releasedev-updates.yaml
+++ b/.github/workflows/push-releasedev-updates.yaml
@@ -15,7 +15,9 @@ jobs:
         token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
 
     - name: Run export script
-      run: OUTPUT=releaseDev python ./scripts/export.py
+      run: |
+        OUTPUT=pre-release python ./scripts/export.py
+        cp -R pre-release releaseDev
 
     - name: Commit files
       run: |
