--- a/.github/workflows/push-releasedev-updates.yaml
+++ b/.github/workflows/push-releasedev-updates.yaml
@@ -17,6 +17,7 @@ jobs:
     - name: Run export script
       run: |
         OUTPUT=pre-release python ./scripts/export.py
+        rm -r -f releaseDev
         cp -R pre-release releaseDev
 
     - name: Commit files
@@ -24,7 +25,7 @@ jobs:
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git add .
-        git commit -a -m "Updating releaseDev files"
+        git commit -a -m "Updating releaseDev files $(date)"
 
     - name: Push changes
       uses: ad-m/github-push-action@master
