--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -38,6 +38,21 @@ jobs:
       BUILD_PATH: github.com/kubescape/regolibrary/gitregostore/...
     secrets: inherit
 
+  test-coverage:
+    name: Check coverage
+    runs-on: ubuntu-latest
+    needs: [test_pr_checks]
+    steps:
+      - name: Check coverage
+        run: |
+          response=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://coveralls.io/github/$GITHUB_REPOSITORY/builds/$GITHUB_RUN_ID.json)
+          coverage=$(echo "$response" | jq '.covered_percent')
+          if (( $(echo "$coverage < 80" |bc -l) )); then
+            echo "Code coverage is less than 80%, blocking the PR"
+            exit 1
+          fi
+
+
   build-and-rego-test:
     name: Build and test rego artifacts
     runs-on: ubuntu-latest
