modified:   .github/workflows/pr-tests.yaml

--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -45,7 +45,7 @@ jobs:
     steps:
       - name: Check coverage
         # path-to-lcov: coverage.lcov
-        run: cat coverage.lcov
+        run: cat ./coverage/lcov.info
       - name: test cover
         run: cat coverage.out
 
