--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -43,11 +43,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test_pr_checks]
     steps:
-      - name: Check coverage
-        # path-to-lcov: coverage.lcov
-        run: cat ./coverage/lcov.info
       - name: test cover
         run: cat coverage.out
+      - name: Output Run ID
+        run: echo ${{ github.run_id }}
+      - name: Output Run Number
+        run: echo ${{ github.run_number }}
+      - name: Output Run Attempt
+        run: echo ${{ github.run_attempt }}
 
         # run: |
         #   response=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://coveralls.io/github/$GITHUB_REPOSITORY/builds/$GITHUB_RUN_ID.json)
