--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -51,7 +51,13 @@ jobs:
         run: echo ${{ github.run_number }}
       - name: Output Run Attempt
         run: echo ${{ github.run_attempt }}
-
+      - name: Get Coverage Data from Coveralls
+        id: coveralls
+        run: |
+          response=$(curl -s -H "Authorization: token ${{ secrets.COVERALLS_TOKEN }}" \
+                          "https://coveralls.io/builds/60582650.json")
+          coverage=$(echo $response | jq '.covered_percent')
+          echo "::set-output name=coverage::$coverage"
         # run: |
         #   response=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://coveralls.io/github/$GITHUB_REPOSITORY/builds/$GITHUB_RUN_ID.json)
         #   coverage=$(echo "$response" | jq '.covered_percent')
