--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -55,7 +55,10 @@ jobs:
           response=$(curl -s -H "Authorization: token ${{ secrets.COVERALLS_TOKEN }}" \
                           "https://coveralls.io/builds/60582650.json")
           coverage=$(echo $response | jq '.covered_percent')
-          echo "::set-output name=coverage::$coverage"
+          echo "COVERAGE=$coverage" >> $GITHUB_ENV
+      - name: Use Coverage Data
+        run: |  
+          echo "Coverage: $COVERAGE"
         # run: |
         #   response=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://coveralls.io/github/$GITHUB_REPOSITORY/builds/$GITHUB_RUN_ID.json)
         #   coverage=$(echo "$response" | jq '.covered_percent')
