--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -43,24 +43,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test_pr_checks]
     steps:
-
-      - name: Output Run ID
-        run: echo ${{ github.run_id }}
-
-      - name: Output Run Number
-        run: echo ${{ github.run_number }}
-
-      - name: Output Run Attempt
-        run: echo ${{ github.run_attempt }}
-      
-      - name: Output commit sha
-        run: echo ${{ github.sha }}
-
-      - name: Get Coverage Data from Coveralls
+      - name: Get Coverage Data from Coveralls by commit SHA
         id: coveralls
         run: |
           response=$(curl -s -H "Authorization: token ${{ secrets.COVERALLS_TOKEN }}" \
-                          "https://coveralls.io/builds/60582650.json")
+                          "https://coveralls.io/builds/${{ github.sha }}.json")
           coverage=$(echo $response | jq '.covered_percent')
           echo "COVERAGE=$coverage" >> $GITHUB_ENV
       
