--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -41,19 +41,23 @@ jobs:
   test-coverage:
     name: Check coverage
     runs-on: ubuntu-latest
-    needs: [test_pr_checks]
-    steps:
-      - name: Get Coverage Data from Coveralls by commit SHA
-        id: coveralls
-        run: |
-          response=$(curl -s -H "Authorization: token ${{ secrets.COVERALLS_TOKEN }}" \
-                          "https://coveralls.io/builds/${{ github.sha }}.json")
-          coverage=$(echo $response | jq '.covered_percent')
-          echo "COVERAGE=$coverage" >> $GITHUB_ENV
+    # uses: kubescape/workflows/.github/workflows/kubescape-cli-e2e-tests.yaml@main
+    uses: ./workflows/coverage-check.yaml@main
+    with:
+      COVERAGE-LIMIT: "50"
+    # needs: [test_pr_checks]
+    # steps:
+    #   - name: Get Coverage Data from Coveralls by commit SHA
+    #     id: coveralls
+    #     run: |
+    #       response=$(curl -s -H "Authorization: token ${{ secrets.COVERALLS_TOKEN }}" \
+    #                       "https://coveralls.io/builds/${{ github.sha }}.json")
+    #       coverage=$(echo $response | jq '.covered_percent')
+    #       echo "COVERAGE=$coverage" >> $GITHUB_ENV
       
-      - name: Use Coverage Data
-        run: |  
-          echo "Coverage: $COVERAGE"
+    #   - name: Use Coverage Data
+    #     run: |  
+    #       echo "Coverage: $COVERAGE"
         # run: |
         #   response=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://coveralls.io/github/$GITHUB_REPOSITORY/builds/$GITHUB_RUN_ID.json)
         #   coverage=$(echo "$response" | jq '.covered_percent')
