adding main ref

--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -39,7 +39,7 @@ jobs:
     secrets: inherit
 
   test-coverage:
-    uses: kubescape/workflows/.github/workflows/coverage-check.yaml
+    uses: kubescape/workflows/.github/workflows/coverage-check.yaml@main
     needs: [test_pr_checks]
     with:
       COVERAGELIMIT: "80"
