change field name
Signed-off-by: YiscahLevySilas1 <yiscahls@armosec.io>

--- a/controls/C-0018-configuredreadinessprobe.json
+++ b/controls/C-0018-configuredreadinessprobe.json
@@ -15,7 +15,7 @@
     "controlID": "C-0018",
     "example": "@controls/examples/c018.yaml",
     "baseScore": 3,
-    "controlTypeTags": [
+    "typeTags": [
         "devops"
     ]
 }
