--- a/controls/C-0012-applicationscredentialsinconfigurationfiles.json
+++ b/controls/C-0012-applicationscredentialsinconfigurationfiles.json
@@ -37,7 +37,7 @@
     "test": "Check if the pod has sensitive information in environment variables, by using list of known sensitive key names. Check if there are configmaps with sensitive information.",
     "controlID": "C-0012",
     "baseScore": 8.0,
-    "controlTypeTags": [
+    "typeTags": [
         "security",
         "compliance",
         "security-impact"
