--- a/controls/C-0034-automaticmappingofserviceaccount.json
+++ b/controls/C-0034-automaticmappingofserviceaccount.json
@@ -26,7 +26,7 @@
     "controlID": "C-0034",
     "baseScore": 6.0,
     "example": "@controls/examples/c034.yaml",
-    "typeTags": [
+    "controlTypeTags": [
         "security",
         "compliance"
     ]
