--- a/controls/C-0049-networkmapping.json
+++ b/controls/C-0049-networkmapping.json
@@ -28,7 +28,7 @@
     "controlID": "C-0049",
     "baseScore": 3.0,
     "example": "@controls/examples/c049.yaml",
-    "typeTags": [
+    "controlTypeTags": [
         "security",
         "compliance"
     ]
