Revert "add controlTypeTags as separate field"
This reverts commit fd55972d9ff50d10633441db851d0dccea344dce.

Signed-off-by: YiscahLevySilas1 <yiscahls@armosec.io>

--- a/controls/C-0034-automaticmappingofserviceaccount.json
+++ b/controls/C-0034-automaticmappingofserviceaccount.json
@@ -25,9 +25,5 @@
     "test": "Check all service accounts on which automount is not disabled.  Check all workloads on which they and their service account don't disable automount ",
     "controlID": "C-0034",
     "baseScore": 6.0,
-    "example": "@controls/examples/c034.yaml",
-    "controlTypeTags": [
-        "security",
-        "compliance"
-    ]
+    "example": "@controls/examples/c034.yaml"
 }
