--- a/.github/workflows/ks-check.yaml
+++ b/.github/workflows/ks-check.yaml
@@ -18,6 +18,9 @@ jobs:
         account: ${{secrets.KUBESCAPE_ACCOUNT}}
         # # Optional: Scan a specific path. Default will scan the whole repository
         # files: "examples/*.yaml"
+        # frameworks: |
+        #   nsa,mitre
+        failedThreshold: 60
     - name: Upload Kubescape scan results to Github Code Scanning
       uses: github/codeql-action/upload-sarif@v2
       with:
