--- a/.github/workflows/ks-check.yaml
+++ b/.github/workflows/ks-check.yaml
@@ -1,5 +1,10 @@
 name: Kubescape scanning for misconfigurations
-on: [push, pull_request]
+
+on:
+  push:
+    branches: [ master, main ]
+  pull_request:
+    types: [ opened, synchronize, reopened, ready_for_review ]    
 jobs:
   kubescape:
     runs-on: ubuntu-latest
@@ -9,7 +14,7 @@ jobs:
       security-events: write
     steps:
     - uses: actions/checkout@v3
-    - uses: kubescape/github-action@main
+    - uses: kubescape/github-action@master
       continue-on-error: true
       with:
         format: sarif
