--- a/.github/workflows/ks-check.yaml
+++ b/.github/workflows/ks-check.yaml
@@ -6,27 +6,8 @@ on:
   pull_request:
     types: [ opened, synchronize, reopened, ready_for_review ]    
 jobs:
-  kubescape:
-    runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
-    steps:
-    - uses: actions/checkout@v3
-    - uses: kubescape/github-action@master
-      continue-on-error: true
-      with:
-        format: sarif
-        outputFile: results
-        # # Optional: Specify the Kubescape cloud account ID
-        account: ${{secrets.KUBESCAPE_ACCOUNT}}
-        # # Optional: Scan a specific path. Default will scan the whole repository
-        # files: "examples/*.yaml"
-        # frameworks: |
-        #   nsa,mitre
-        failedThreshold: 60
-    - name: Upload Kubescape scan results to Github Code Scanning
-      uses: github/codeql-action/upload-sarif@v2
-      with:
-        sarif_file: results.sarif
+  test_ks_misconfigurations:
+    uses: kubescape/workflows/.github/workflows/ks-ga-flow@main
+    with:
+      FAILEDTHRESHOLD: 60 
+    secrets: inherit
