--- a/.github/workflows/ks-check.yaml
+++ b/.github/workflows/ks-check.yaml
@@ -1,22 +1,11 @@
 name: Kubescape scanning for misconfigurations
-on: [push, pull_request]
+
+on:
+  push:
+    branches: [ master, main ]
+  pull_request:
+    types: [ opened, synchronize, reopened, ready_for_review ]    
 jobs:
-#test kubescape repo
-  kubescape:
-    runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
-    steps:
-    - uses: actions/checkout@v3
-    - uses: kubescape/github-action@main
-      continue-on-error: true
-      with:
-        format: sarif
-        outputFile: results
-        account: ${{secrets.KUBESCAPE_ACCOUNT}}
-    - name: Upload Kubescape scan results to Github Code Scanning
-      uses: github/codeql-action/upload-sarif@v2
-      with:
-        sarif_file: results.sarif
+  test_ks_misconfigurations:
+    uses: kubescape/workflows/.github/workflows/ks-ga-flow@main
+    secrets: inherit
