--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -29,7 +29,7 @@ jobs:
 
   # main job of testing and building the env. 
   test_pr_checks:
-    needs: [markdown-link-check]
+    # needs: [markdown-link-check]
     permissions:
       pull-requests: write
     uses: kubescape/workflows/.github/workflows/go-basic-tests.yaml@main
@@ -40,7 +40,13 @@ jobs:
 
   test-coverage:
     uses: kubescape/workflows/.github/workflows/coverage-check.yaml@main
-    needs: [test_pr_checks]
+    if: |
+      ${{ (always() && 
+      (contains(needs.*.result, 'success')) && 
+      !(contains(needs.*.result, 'skipped')) && 
+      !(contains(needs.*.result, 'failure')) && 
+      !(contains(needs.*.result, 'cancelled'))) }}
+    # needs: [test_pr_checks]
     with:
       COVERAGELIMIT: "57"
       SHA: ${{ github.sha }}
@@ -48,7 +54,13 @@ jobs:
   build-and-rego-test:
     name: Build and test rego artifacts
     runs-on: ubuntu-latest
-    needs: [test_pr_checks]
+    if: |
+        ${{ (always() && 
+        (contains(needs.*.result, 'success')) && 
+        !(contains(needs.*.result, 'skipped')) && 
+        !(contains(needs.*.result, 'failure')) && 
+        !(contains(needs.*.result, 'cancelled'))) }}
+    # needs: [test_pr_checks]
     outputs:
       REGO_ARTIFACT_KEY_NAME: ${{ steps.set_outputs.outputs.REGO_ARTIFACT_KEY_NAME }}
       REGO_ARTIFACT_PATH: ${{ steps.set_outputs.outputs.REGO_ARTIFACT_PATH }}
