--- a/.github/workflows/ks-check.yaml
+++ b/.github/workflows/ks-check.yaml
@@ -9,3 +9,4 @@ jobs:
   test_ks_misconfigurations:
     uses: kubescape/workflows/.github/workflows/ks-ga-flow.yaml@main
     secrets: inherit
+    #test pr
