--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -46,10 +46,11 @@ jobs:
       !(contains(needs.*.result, 'skipped')) && 
       !(contains(needs.*.result, 'failure')) && 
       !(contains(needs.*.result, 'cancelled'))) }}
-    # needs: [test_pr_checks]
+    needs: [test_pr_checks]
     with:
-      COVERAGELIMIT: "57"
+      COVERAGELIMIT: ${{ secrets.COVERAGELIMIT }}
       SHA: ${{ github.sha }}
+
 
   build-and-rego-test:
     name: Build and test rego artifacts
