--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -47,10 +47,11 @@ jobs:
       !(contains(needs.*.result, 'failure')) && 
       !(contains(needs.*.result, 'cancelled'))) }}
     needs: [test_pr_checks]
+    # secrets: ${{ secrets }}
+    secrets: inherit
     with:
       COVERAGELIMIT: ${{ secrets.COVERAGELIMIT }}
       SHA: ${{ github.sha }}
-    secrets: inherit
 
 
   build-and-rego-test:
