--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -48,7 +48,7 @@ jobs:
       !(contains(needs.*.result, 'failure')) && 
       !(contains(needs.*.result, 'cancelled'))) }}
     with:
-      COVERAGELIMIT: ${{ secrets.COVERAGELIMIT }}
+      COVERAGELIMIT: "58"
       SHA: ${{ github.sha }}
 
 
