--- a/rules/ensure-default-service-accounts-has-only-default-roles/test/passed_rolebinding_one_subject/input/rolebinding.yaml
+++ b/rules/ensure-default-service-accounts-has-only-default-roles/test/passed_rolebinding_one_subject/input/rolebinding.yaml
@@ -9,3 +9,7 @@ subjects:
 - kind: ServiceAccount  
   name: default
   namespace: default
+roleRef:
+  kind: ClusterRole
+  name: test
+  apiGroup: rbac.authorization.k8s.io
