changes following review
Signed-off-by: YiscahLevySilas1 <yiscahls@armosec.io>

--- a/rules/exposure-to-internet/test/success_with_ingress/input/ingress.yaml
+++ b/rules/exposure-to-internet/test/success_with_ingress/input/ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: my-ingress
@@ -9,5 +9,9 @@ spec:
     http:
       paths:
       - path: /
+        pathType: ImplementationSpecific
         backend:
-          serviceName: my-service-b
+          service:
+            name: my-service-b
+            port:
+              number: 80
