add check for env values for wl
Signed-off-by: YiscahLevySilas1 <yiscahls@armosec.io>

--- a/rules/rule-credentials-in-env-var/test/pod/input/pod.yaml
+++ b/rules/rule-credentials-in-env-var/test/pod/input/pod.yaml
@@ -8,8 +8,10 @@ spec:
   containers:
   - name: test-container
     env :
-      - name : azure_batch_key
+      - name : random
         value : "Hello from the environment"
+      - name: some-name
+        value: my_key_value
     image: hashicorp/http-echo:0.2.3
     securityContext:
       allowPrivilegeEscalation: true
